<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Nivel5Activity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvNivel5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="30dp"
                android:background="#B2E7FF"
                android:text="@string/tvNivel5"
                android:textAlignment="center"
                android:textColor="#607D8B"
                android:textSize="24sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/tvNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/tvNombre"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvPuntuacion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/tvPuntuacion"
                android:textSize="20sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvVidas"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:text="@string/tvVidas"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/ivVidas"
                    android:layout_width="80dp"
                    android:layout_height="25dp"
                    android:src="@drawable/tresvidas" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/ivNumero1"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    app:srcCompat="@drawable/cero" />

                <ImageView
                    android:id="@+id/ivSigno"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    app:srcCompat="@drawable/multiplicacion" />

                <ImageView
                    android:id="@+id/ivNumero2"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    app:srcCompat="@drawable/cero" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/etRespuesta"
                    android:layout_width="100dp"
                    android:layout_height="48dp"
                    android:layout_marginLeft="50dp"
                    android:layout_marginTop="30dp"
                    android:ems="10"
                    android:gravity="center_horizontal"
                    android:hint="@string/etRespuesta"
                    android:inputType="number"
                    android:minHeight="48dp"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/bComprobar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50dp"
                    android:layout_marginTop="30dp"
                    android:backgroundTint="#66E4F4"
                    android:onClick="comprobar"
                    android:text="@string/bComprobar"
                    android:textSize="20sp" />
            </LinearLayout>

            <Button
                android:id="@+id/bSalir"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="129dp"
                android:layout_marginTop="10dp"
                android:backgroundTint="#8C9EFF"
                android:onClick="salir"
                android:paddingLeft="40dp"
                android:paddingRight="40dp"
                android:text="@string/bSalir"
                android:textColor="#FFFFFF"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/ivFrutas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/macedonia" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>