<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ivPersonaje"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_marginLeft="100dp"
                android:layout_marginTop="110dp"
                android:layout_marginRight="80dp"
                app:srcCompat="@drawable/manzana" />

            <EditText
                android:id="@+id/etNombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="77dp"
                android:layout_marginTop="50dp"
                android:layout_marginRight="77dp"
                android:background="@color/design_default_color_surface"
                android:ellipsize="start"
                android:ems="10"
                android:gravity="center_horizontal"
                android:inputType="text"
                android:maxLength="16"
                android:minHeight="48dp"
                android:paddingLeft="30dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/etNombre"
                android:textColor="@color/black"
                android:textSize="22sp" />

            <Button
                android:id="@+id/bJugar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="150dp"
                android:layout_marginTop="20dp"
                android:backgroundTint="#F3437F"
                android:onClick="jugar"
                android:paddingLeft="40dp"
                android:paddingTop="10dp"
                android:paddingRight="40dp"
                android:paddingBottom="10dp"
                android:text="@string/bJugar"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/tvMejorPuntuacion"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_marginTop="10dp"
                android:background="@color/design_default_color_surface"
                android:ellipsize="none"
                android:gravity="center"
                android:text="@string/tvMejorPuntuacion"
                android:textAlignment="center"
                android:textColor="#673AB7"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/bSalir"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="150dp"
                android:layout_marginTop="10dp"
                android:backgroundTint="#8951ED"
                android:onClick="salir"
                android:paddingLeft="40dp"
                android:paddingTop="10dp"
                android:paddingRight="40dp"
                android:paddingBottom="10dp"
                android:text="@string/bSalir"
                android:textSize="22sp" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
